Slideshow buttons overflow fix

--- a/less/widgets/slideshow.less
+++ b/less/widgets/slideshow.less
@@ -415,7 +415,7 @@
 		height: 10px;
 		display: block;
 		overflow: hidden;
-		text-indent: -120%;
+		text-indent: -1000%;
 		padding: 0;
 
         @media @mobile {
